--- a/README
+++ b/README
@@ -37,7 +37,7 @@ List of apis: ( collection is added for reference )
 3- Get Task List ->
 4- Update Task List ->
 5- Get Shared Tasks List ->
-6- Updated Shared Task List ->
+6- Update Shared Task List ->
 7- Delete Shared Task List -> 
 
 **********TASK**********
